# Qt_OpenCV

./: .gitignore  CMakeLists.txt  application.cpp  main.cpp  mainwindow.cpp  mainwindow.h
